--- a/journal/202104.md
+++ b/journal/202104.md
@@ -251,7 +251,7 @@ News coverage secured by Monde PR:
 
 Attended:
 
-- Apr 21 - [Blockchain Land](https://blockchainland.talent-republic.tv/) - Internet. @adcade talked about "[Opinions](https://blockchainland.talent-republic.tv/on-demand/que-opinar-sobre-las-criptomonedas/) on cryptocurrencies" and the [future](https://blockchainland.talent-republic.tv/on-demand/blockchains-futuro-escalabilidad-u-oportunismo/) of crypto as part of Decred participation in Blockchain Land by Talent Land. The panels were streamed in [virtual spaces](https://es.cointelegraph.com/news/first-massive-spanish-speaking-blockchain-event-created-by-decentraland-and-cryptovoxels) Decentraland and Cryptovoxels.
+- Apr 21 - [Blockchain Land](https://blockchainland.talent-republic.tv/) - Internet. @adcade talked about "[Opinions](https://blockchainland.talent-republic.tv/on-demand/que-opinar-sobre-las-criptomonedas/) on cryptocurrencies" and the [future](https://blockchainland.talent-republic.tv/on-demand/blockchains-futuro-escalabilidad-u-oportunismo/) of crypto as part of Decred participation in Blockchain Land by Talent Land. The panels were streamed in [virtual worlds](https://es.cointelegraph.com/news/first-massive-spanish-speaking-blockchain-event-created-by-decentraland-and-cryptovoxels) Decentraland and Cryptovoxels.
 
 ## Media
 
@@ -270,12 +270,12 @@ Videos:
 - Interoperability for digital cash by @phoenixgreen ([youtube](https://www.youtube.com/watch?v=iBN0ZzlEKMA))
 - Decred Price Analysis - 27th April 2021 by Josh Olszewicz of Brave New Coin ([youtube](https://www.youtube.com/watch?v=NfSp5IjPtAI))
 
-@karamble has mirrored all Decred YouTube [channel](https://www.youtube.com/decredchannel) videos at [tube.decredcommunity.org](https://tube.decredcommunity.org/). It is powered by [PeerTube](https://joinpeertube.org/) - an open-source, self-hosted, lightweight alternative to YouTube that can connect to the Fediverse. [Here](https://docs.joinpeertube.org/use-third-party-application) is a list of tools for regular users. If you run a PeerTube instance you can help make the content even more resilient by setting up [following and redundancy](https://docs.joinpeertube.org/admin-following-instances).
+@karamble has mirrored all Decred YouTube [channel](https://www.youtube.com/decredchannel) videos at [tube.decredcommunity.org](https://tube.decredcommunity.org/). It is powered by [PeerTube](https://joinpeertube.org/) - an open-source, self-hosted, lightweight alternative to YouTube that can connect to the [Fediverse](https://en.wikipedia.org/wiki/Fediverse). [Here](https://docs.joinpeertube.org/use-third-party-application) is a list of tools for regular users. Admins running PeerTube instances can help to make the content even more resilient by setting up [following and redundancy](https://docs.joinpeertube.org/admin-following-instances).
 
 Audio:
 
 - Rough Consensus 18: Bull market blues - Checkmate, Permabull Nino & Mister Black ([libsyn](https://roughconsensus.libsyn.com/episode-18-bull-market-blues), [spotify](https://open.spotify.com/episode/0E7k86gme05YINpdBlVPqy))
-- Keyword: Crypto Podcast with @lukebp ([youtube](https://www.youtube.com/watch?v=pRJ1zJFVoFo), [keywordcrypto.com](https://www.keywordcrypto.com/luke-p-from-decred/))
+- Keyword: Crypto Podcast - Luke P. from Decred ([youtube](https://www.youtube.com/watch?v=pRJ1zJFVoFo), [keywordcrypto.com](https://www.keywordcrypto.com/luke-p-from-decred/))
 
 Translations:
 
@@ -314,21 +314,21 @@ In April DCR was trading between USD 169.50-243.70 / BTC 0.0031-0.0040. The aver
 
 ## Relevant External
 
-The Fei "stablecoin" was [launched](https://www.coindesk.com/1b-fei-stablecoins-rocky-start-is-a-wake-up-call-for-defi-investors) in early April, but defied expectations by trading at significantly lower than the target of $1. This left many investors in a position where they were unable to exit their FEI position without taking heavy losses, due to the complex and not predicted behavior of the novel incentive and burn mechanisms. FEI did eventually [attain](https://www.coindesk.com/1b-stablecoin-fei-hits-price-target-for-first-time-a-month-after-launch) its $1 target after about 1 month after launch.
+The Fei "stablecoin" was [launched](https://www.coindesk.com/1b-fei-stablecoins-rocky-start-is-a-wake-up-call-for-defi-investors) in early April, but defied expectations by trading at significantly lower than the target of $1. This left many investors in a position where they were unable to exit their FEI position without taking heavy losses, due to the complex and unpredictable behavior of the novel incentive and burn mechanisms. FEI did eventually [attain](https://www.coindesk.com/1b-stablecoin-fei-hits-price-target-for-first-time-a-month-after-launch) its $1 target after about 1 month after launch.
 
 The Yearn Finance community have been discussing [YIP-61](https://gov.yearn.finance/t/yip-61-governance-2-0/10460/25) "Governance 2.0", which extends the multisig arrangement put in place temporarily by YIP-41, and [approving](https://snapshot.org/#/ybaby.eth/proposal/QmSMyYeKrRpnA7Xn56o2NtbCUzxmhzCupL7LxMA1reXxq4) it with 99.97% yes votes. This proposal also delegates certain powers to a set of Yearn contributor teams ("yTeams"), and "clarifies" the role of YFI holders as being primarily about delegating powers to these teams and approving YIPs.
 
-The NFT sub-community is crowdfunding its own new media platform ([NFTs WTF](https://nfts.wtf)), via the mechanism of selling 100 NFTs that confer voting rights in a DAO that will support the platform. It is interesting to note that the [post](https://nfts.wtf/crowdfunding-the-worlds-first-d-zine/) announcing the first phase of the crowdsale, in which 51 of the 100 controlling tokens were sold, only 3 were sold to Venture Capitalists, and as individuals not representatives of their organizations.
+The NFT sub-community is crowdfunding its own new media platform ([NFTs WTF](https://nfts.wtf)), via the mechanism of selling 100 NFTs that confer voting rights in a DAO that will support the platform. It is interesting to note that the [post](https://nfts.wtf/crowdfunding-the-worlds-first-d-zine/) announcing the first phase of the crowdsale, in which 51 of the 100 controlling tokens were sold, only 3 were sold to Venture Capitalists, and only as individuals and not representatives of their organizations.
 
 Coinbase started [selling](https://uk.finance.yahoo.com/news/coinbase-direct-listing-stock-cryptocurrency-bitcoin-172655492.html) shares on the Nasdaq, unlike an IPO this did not involve creating new shares but instead the existing shareholders bringing some of theirs to market.
+
+That's all for April. Submit your stories [here](https://github.com/xaur/decred-news/labels/next%20release) or simply share your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#feedback). We're always looking for [contributors](https://github.com/xaur/decred-news/blob/docs/contributing.md) to improve DJ!
 
 ## About
 
 This is issue 37 of Decred Journal. Index of all issues, mirrors, and translations is available [here](https://xaur.github.io/decred-news/).
 
 Most information from third parties is relayed directly from source after a minimal sanity check. The authors of the Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
-
-Submit your stories [here](https://github.com/xaur/decred-news/labels/next%20release) or simply share your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#feedback). We're always looking for [contributors](https://github.com/xaur/decred-news/blob/docs/contributing.md) to improve DJ!
 
 Credits (alphabetical order):
 
