--- a/journal/202104.md
+++ b/journal/202104.md
@@ -1,8 +1,8 @@
 # {DRAFT} Decred Journal – April 2021
 
-![{alt text}](../img/{file.ext} "{hover tooltip text}")
+![abstract art by @saender](../img/202104.1.github.png)
 
-_Image: {"$title by $author. $optional-description" for artwork, "$description" for photos}_
+_Image: Point Integral by @saender_
 
 April's highlights:
 
@@ -334,5 +334,5 @@ Credits (alphabetical order):
 
 - writing and editing: bee, degeri, l1ndseymm, richardred
 - reviews and feedback: chappjc, davecgh, jholdstock, lukebp
-- title image: {}
+- title image: saender
 - funding: Decred stakeholders
