--- a/journal/202104.md
+++ b/journal/202104.md
@@ -8,8 +8,8 @@ April's highlights:
 
 - Decred's 6th consensus vote has passed with unanimous approval and high voter turnout.
 - Politeia v1.0 is now live with more scalable and future-proof infrastructure.
-- Politeia's first proposal is being voted on to formalize development roadmap and budget.
-- DCRDEX is heading towards v0.2 update with a number of backend and UX improvements, as well as the foundations for future exciting features.
+- Politeia's first proposal is being voted on to formalize the development roadmap and budget.
+- DCRDEX is heading towards v0.2 update with several backend and UX improvements, as well as the foundations for future exciting features.
 - Initial DCRDEX integration has been merged in Decrediton.
 
 Contents:
@@ -74,7 +74,7 @@ Release [v1.6.3](https://github.com/decred/decrediton/tree/release-v1.6%2B) is b
 
 **[Politeia](https://github.com/decred/politeia)**
 
-Politeia v1.0.0 has been released with the new storage backend, streamlined API, new plugin architecture and 5 plugins. Read the [release notes](https://github.com/decred/politeia/releases/tag/v1.0.0) for full details on each feature. The new version has been deployed at [proposals.decred.org](https://proposals.decred.org/).
+Politeia v1.0.0 has been released with the new storage backend, streamlined API, new plugin architecture, and 5 plugins. Read the [release notes](https://github.com/decred/politeia/releases/tag/v1.0.0) for full details on each feature. The new version has been deployed at [proposals.decred.org](https://proposals.decred.org/).
 
 2FA support tried hard to escape our attention and is now live. Users can set it up in account settings. Don't forget to backup the key.
 
@@ -85,9 +85,9 @@ Merged in April:
 - list registration fee in the [history](https://github.com/decred/politeiagui/pull/2322) of purchases
 - ~24 bugs discovered in the new version have been fixed
 
-One notable change is the addition of [timestamps](https://github.com/decred/politeia/pull/1395) to cast votes. In Git backend precise timestamps were not stored to improve voter privacy, and as a result it was only possible to determine if a vote was cast within a ~60 min period. In tstore backend timestamp is already being recorded by Trillian and this cannot be changed without writing a custom Trillian implementation. Because vote timestamp is now public data anyway, adding it directly to the vote structure allows dcrdata to obtain it much easier (e.g. to build its vote [graphs](https://dcrdata.decred.org/proposal/video-content-production-for-decred-phase-3)). But it also means a bit lower privacy for people casting all their votes at once. People who want to protect their privacy are strongly advised to use `politeiavoter`'s [trickling feature](https://github.com/decred/politeia/blob/master/politeiawww/cmd/politeiavoter/README.md#privacy-considerations).
+One notable change is the addition of [timestamps](https://github.com/decred/politeia/pull/1395) to cast votes. In Git backend precise timestamps were not stored to improve voter privacy, and as a result, it was only possible to determine if a vote was cast within a ~60 min period. In tstore backend timestamp is already being recorded by Trillian and this cannot be changed without writing a custom Trillian implementation. Because vote timestamp is now public data anyway, adding it directly to the vote structure allows dcrdata to obtain it much easier (e.g. to build its vote [graphs](https://dcrdata.decred.org/proposal/video-content-production-for-decred-phase-3)). But it also means a bit lower privacy for people casting all their votes at once. People who want to protect their privacy are strongly advised to use `politeiavoter`'s [trickling feature](https://github.com/decred/politeia/blob/master/politeiawww/cmd/politeiavoter/README.md#privacy-considerations).
 
-@lukebp talked about Politeia development, latest releases and future directions on Decred in Depth [podcast](https://www.youtube.com/watch?v=J6IAjmwkki0) (starts at 12 min).
+@lukebp talked about Politeia development, latest releases, and future directions on Decred in Depth [podcast](https://www.youtube.com/watch?v=J6IAjmwkki0) (starts at 12 min).
 
 Politeia's own first [proposal](https://proposals.decred.org/record/91cfcc8) is now live (and voting), formalizing its development roadmap and budget until the end of 2021.
 
@@ -184,15 +184,15 @@ See the [April report](https://decredcommunity.github.io/social-media-stats/post
 
 ## Governance
 
-In April the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 10,949 DCR and spent 984 DCR. Using April's average DCR rate of $198.60, this is $2.17M received and $195K spent. At March's average rate $161.01, the USD billed for past work is $158K. As of May 2, Treasury balance is 672,768 DCR (140 million USD at $208.13).
+In April the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 10,949 DCR and spent 984 DCR. Using April's average DCR rate of $198.60, this is $2.17M received and $195K spent. At March's average rate of $161.01, the USD billed for past work is $158K. As of May 2, the Treasury balance is 672,768 DCR (140 million USD at $208.13).
 
 The consensus vote to enable the new treasury has [passed](https://explorer.dcrdata.org/agenda/treasury) with 99.9% approval and 83% voter participation. This is the second highest voter turnout in Decred's history after the [stake difficulty](https://dcrdata.decred.org/agenda/sdiffalgorithm) vote in 2017 (88%).
 
 Proposal news:
 
-- A new [proposal](https://proposals.decred.org/record/91cfcc8) for funding Politeia development accompanied the deployment of v1.0.0. This proposal requests a maximum budget of $118K to cover a range of new features, expected to be delivered over a six month period. The features on this roadmap include another upgrade to the plugin architecture, user API overhaul, email-free accounts, extra metadata for proposals, proposal life cycles, and proposal author updates. Vote started on May 11.
+- A new [proposal](https://proposals.decred.org/record/91cfcc8) for funding Politeia development accompanied the deployment of v1.0.0. This proposal requests a maximum budget of $118K to cover a range of new features, expected to be delivered over a six month period. The features on this roadmap include another upgrade to the plugin architecture, user API overhaul, email-free accounts, extra metadata for proposals, proposal life cycles, and proposal author updates. The vote started on May 11.
 - The video production phase 3 [proposal](https://proposals-archive.decred.org/proposals/95a1409) was approved with 98% approval and voter participation of 40%.
-- The Design domain [proposal](https://proposals-archive.decred.org/proposals/76eba5a) for remainder of 2021 was approved with 97% approval and voter participation of 28%.
+- The Design domain [proposal](https://proposals-archive.decred.org/proposals/76eba5a) for the remainder of 2021 was approved with 97% approval and voter participation of 28%.
 
 See Politeia Digest [issue 42](https://blockcommons.red/politeia-digest/issue042/) for more details on the month's proposals.
 
@@ -302,7 +302,7 @@ Selected Twitter discussions:
 - @lukebp clears up what a [DAO](https://twitter.com/lukebp_/status/1378381506947784706) is
 - @overthrowy shared his Decred [investment deck](https://twitter.com/overthrowy/status/1381097293122740225)
 
-> For people who believe that "the market" makes the best decisions, Bitcoin may be the right choice. During any contentious change, the network may split in two or more forks that will compete (fight) for financial and social support of PoW miners, developers, investors and exchanges.
+> For people who believe that "the market" makes the best decisions, Bitcoin may be the right choice. During any contentious change, the network may split into two or more forks that will compete (fight) for the financial and social support of PoW miners, developers, investors, and exchanges.
 > 
 > For people who believe in collaboration, who aspire to pursue the common good, and who are willing to align themselves behind the general will of the decentralized voter collective, Decred may be the right choice.
 > 
@@ -314,7 +314,7 @@ In April DCR was trading between USD 169.50-243.70 / BTC 0.0031-0.0040. The aver
 
 ## Relevant External
 
-The Fei "stablecoin" was [launched](https://www.coindesk.com/1b-fei-stablecoins-rocky-start-is-a-wake-up-call-for-defi-investors) in early April, but defied expectations by trading at significantly lower than the target of $1. This left many investors in a position where they were unable to exit their FEI position without taking heavy losses, due to the complex and unpredictable behavior of the novel incentive and burn mechanisms. FEI did eventually [attain](https://www.coindesk.com/1b-stablecoin-fei-hits-price-target-for-first-time-a-month-after-launch) its $1 target after about 1 month after launch.
+The Fei "stablecoin" was [launched](https://www.coindesk.com/1b-fei-stablecoins-rocky-start-is-a-wake-up-call-for-defi-investors) in early April but defied expectations by trading at significantly lower than the target of $1. This left many investors in a position where they were unable to exit their FEI position without taking heavy losses, due to the complex and unpredictable behavior of the novel incentive and burn mechanisms. FEI did eventually [attain](https://www.coindesk.com/1b-stablecoin-fei-hits-price-target-for-first-time-a-month-after-launch) its $1 target after about 1 month after launch.
 
 The Yearn Finance community have been discussing [YIP-61](https://gov.yearn.finance/t/yip-61-governance-2-0/10460/25) "Governance 2.0", which extends the multisig arrangement put in place temporarily by YIP-41, and [approving](https://snapshot.org/#/ybaby.eth/proposal/QmSMyYeKrRpnA7Xn56o2NtbCUzxmhzCupL7LxMA1reXxq4) it with 99.97% yes votes. This proposal also delegates certain powers to a set of Yearn contributor teams ("yTeams"), and "clarifies" the role of YFI holders as being primarily about delegating powers to these teams and approving YIPs.
 
