--- a/journal/202104.md
+++ b/journal/202104.md
@@ -1,3 +1,7 @@
+---
+image: /img/202104.1.github.png
+---
+
 # Decred Journal – April 2021
 
 ![abstract art by @saender](../img/202104.1.github.png)
