--- a/journal/202105.md
+++ b/journal/202105.md
@@ -38,17 +38,27 @@ Contents: { sync }
 
 { put this in Gov or have a separate ANN section? }
 
+{ test tspend }
+
 ## Development
 
 The work reported below has the "merged to master" status unless noted otherwise. It means that the work is completed, reviewed, and integrated into the source code that advanced users can [build and run](https://medium.com/@artikozel/the-decred-node-back-to-the-source-part-one-27d4576e7e1c), but is not yet available in release binaries for regular users.
 
 { hint: below add an overview of activity for each project. add any other project that warrants a paragraph. drop projects without notable updates. for each project the order of reporting is: changes released > merged to master > started work > discussions and future plans }
 
+{ check if any changes were added between May-28 and May-31 }
+
 <a id="dcrd" />
 
 **[dcrd](https://github.com/decred/dcrd)**
 
-- {}
+- moved code for handling [signing](https://github.com/decred/dcrd/pull/2642) standard scripts to its own subpackage, in order to prepare for future splitting of standard script handling from consensus critical code
+- updated OpenBSD [rc script](https://github.com/decred/dcrd/pull/2646) for 6.9 features
+- reworked application [version](https://github.com/decred/dcrd/pull/2651) handling to parse it from a single string, which is easier to manage and is more error-proof
+- perform a graceful shutdown on [SIGHUP](https://github.com/decred/dcrd/pull/2645) signal
+- added script [version](https://github.com/decred/dcrd/pull/2650) to the result of the `gettxout` RPC. The script version is going to become more important in the future when a new version is introduced.
+- [flush](https://github.com/decred/dcrd/pull/2649) block database to disk before UTXO database to ensure the latter can be recovered after an unclean shutdown
+- reworked [UTXO](https://github.com/decred/dcrd/pull/2652) related logic for better separation of concerns. This makes the flow easier to follow and paves the way for optimizing the UTXO database
 
 <a id="dcrwallet" />
 
