Dev dcrwallet wording

--- a/journal/202105.md
+++ b/journal/202105.md
@@ -66,18 +66,18 @@ The work reported below has the "merged to master" status unless noted otherwise
 
 Merged in master and v1.6.3 release:
 
-- improved heuristic for creating [split transaction](https://github.com/decred/dcrwallet/pull/2034) to address more insufficient balance errors
-- fixed input [selection](https://github.com/decred/dcrwallet/pull/2035) for paying VSP fees to resolve two bugs: one where inputs were not being used and could remaining locked, and another where VSP fee could be paid out of the wrong account, possibly reducing privacy of mixing wallets
-- multiple fixes for VSP-managed tickets: fee payment [scheduling](https://github.com/decred/dcrwallet/pull/2045), [error handling](https://github.com/decred/dcrwallet/pull/2046), and a [batch](https://github.com/decred/dcrwallet/pull/2048) of fixes regarding scheduling/revocations/expired fee tx
-- ensure intended wallet [accounts](https://github.com/decred/dcrwallet/pull/2037) (for paying fee and receiving change) are used when syncing failed VSP tickets { what is a "failed VSP ticket"? }
+- improved heuristic for creating [split transactions](https://github.com/decred/dcrwallet/pull/2034) to address more insufficient balance errors when buying tickets
+- fixed [input selection](https://github.com/decred/dcrwallet/pull/2035) when paying VSP fees, resolving two bugs: one where the intended inputs were not being used and could remaining locked, and another where VSP fee could be paid out of the wrong account, possibly degrading privacy of mixing wallets
+- ensure intended wallet [accounts](https://github.com/decred/dcrwallet/pull/2037) are used for paying VSP fee and receiving change when syncing failed VSP tickets { what is a "failed VSP ticket"? }
+- [multiple](https://github.com/decred/dcrwallet/pull/2045) [fixes](https://github.com/decred/dcrwallet/pull/2046) for [tracking](https://github.com/decred/dcrwallet/pull/2048) VSP-managed tickets regarding fee payment scheduling, error handling, revocations, and expired fee transactions
 - ensure there are [no duplicate](https://github.com/decred/dcrwallet/pull/2042) fee payments and that all are tracked by the VSP client
-- a new gRPC endpoint that exposes tickets and fees [tracked](https://github.com/decred/dcrwallet/pull/2040) by the VSP client
 - perform a graceful shutdown when the [SIGHUP](https://github.com/decred/dcrwallet/pull/2039) signal is received
+- a new gRPC endpoint that exposes tickets and fees [tracked](https://github.com/decred/dcrwallet/pull/2040) by the VSP client
 
 Merged in master:
 
-- implemented [`gettxout`](https://github.com/decred/dcrwallet/pull/1903) method returning information about an unspent transaction output, which will allow DCRDEX to operate a DCR wallet in SPV mode.
-- implemented [methods](https://github.com/decred/dcrwallet/pull/1978) to obtain [cfilters](https://bitcoinops.org/en/topics/compact-block-filters/) and the best block. These are similar to dcrd's implementations and also enable DCRDEX to manage DCR in SPV mode.
+- implemented [`gettxout`](https://github.com/decred/dcrwallet/pull/1903) method returning information about an unspent transaction output, which is required for DCRDEX to operate a DCR wallet in [SPV mode](https://github.com/decred/dcrdex/pull/788)
+- implemented [methods](https://github.com/decred/dcrwallet/pull/1978) to obtain cfilters ([compact block filters](https://bitcoinops.org/en/topics/compact-block-filters/)) and the best block. These are similar to dcrd's implementations and also enable DCRDEX to manage DCR in SPV mode.
 
 <a id="dcrctl" />
 
