--- a/journal/202105.md
+++ b/journal/202105.md
@@ -30,6 +30,8 @@ Contents: { sync }
 
 { key highlights for dcrwallet, decrediton and dcrdex }
 
+https://github.com/decred/decred-binaries/releases/tag/v1.6.3
+
 { verify bins }
 
 ## New Treasury Activated
@@ -72,24 +74,37 @@ Merged in master and v1.6.3 release:
 - [multiple](https://github.com/decred/dcrwallet/pull/2045) [fixes](https://github.com/decred/dcrwallet/pull/2046) for [tracking](https://github.com/decred/dcrwallet/pull/2048) VSP-managed tickets regarding fee payment scheduling, error handling, revocations, and expired fee transactions
 - ensure there are [no duplicate](https://github.com/decred/dcrwallet/pull/2042) fee payments and that all are tracked by the VSP client
 - perform a graceful shutdown when the [SIGHUP](https://github.com/decred/dcrwallet/pull/2039) signal is received
-- a new gRPC endpoint that exposes tickets and fees [tracked](https://github.com/decred/dcrwallet/pull/2040) by the VSP client
+- a new gRPC endpoint that exposes tickets and fees [tracked](https://github.com/decred/dcrwallet/pull/2040) by the VSP client (needed by Decrediton)
 
 Merged in master:
 
 - implemented [`gettxout`](https://github.com/decred/dcrwallet/pull/1903) method returning information about an unspent transaction output, which is required for DCRDEX to operate a DCR wallet in [SPV mode](https://github.com/decred/dcrdex/pull/788)
 - implemented [methods](https://github.com/decred/dcrwallet/pull/1978) to obtain cfilters ([compact block filters](https://bitcoinops.org/en/topics/compact-block-filters/)) and the best block. These are similar to dcrd's implementations and also enable DCRDEX to manage DCR in SPV mode.
 
-<a id="dcrctl" />
-
-**[dcrctl](https://github.com/decred/dcrctl)**
-
-- {}
-
 <a id="decrediton" />
 
 **[Decrediton](https://github.com/decred/decrediton)**
 
-- {}
+Merged in master and v1.6.3 release:
+
+- allow to [send](https://github.com/decred/decrediton/pull/3446) funds between accounts in privacy wallets (except into the mixed account)
+- only show the "Process Managed Tickets" view when it is [needed](https://github.com/decred/decrediton/pull/3457)
+- fixed blank page being shown on startup instead of a [loading bar](https://github.com/decred/decrediton/pull/3449)
+- fixed incorrect passphrase allowing to [skip](https://github.com/decred/decrediton/pull/3454) account security migration
+- fixed wallet account [locking](https://github.com/decred/decrediton/pull/3453) to prevent the locking of accounts where VSP tickets are being processed, but to also lock any accounts that no longer need to be unlocked
+- consistently use Lodash for [type checking](https://github.com/decred/decrediton/pull/3135)
+- { were 3476 and 3469 added to 1.6.3 later? }
+
+{ add release build info here or in v1.6.3 section }
+
+{ see if any interesting changes were not mentioned in 1.6.3 rel notes }
+
+Merged in master:
+
+- fixed unmixed and change accounts not being [unlocked](https://github.com/decred/decrediton/pull/3476) when the ticket autobuyer is in privacy mode
+- fixed default Bitcoin [directory](https://github.com/decred/decrediton/pull/3469) on Windows
+- fixed handling of empty value for [balance](https://github.com/decred/decrediton/pull/3468) to maintain
+- introduced [preload script](https://github.com/decred/decrediton/pull/3397) and converted some comms between the main and renderer processes to a more robust approach using `invoke/handle`. This is a first step towards isolating all Node-related calls, so that Node integration can be turned off for the main UI code. 
 
 { pretty DEX integration UI shot, 768px wide if possible }
 
