--- a/journal/202105.md
+++ b/journal/202105.md
@@ -112,7 +112,25 @@ Merged in master:
 
 **[Politeia](https://github.com/decred/politeia)**
 
-- {}
+- added proposal's token to email notification [subject](https://github.com/decred/politeia/pull/1417)
+- updated [About Politeia](https://github.com/decred/politeiagui/pull/2378) copy
+- fixed multiple [comment](https://github.com/decred/politeiagui/pull/2384)-related UI bugs
+- fixed [flickering](https://github.com/decred/politeiagui/pull/2395) during initial UI loading
+- fixed [unit](https://github.com/decred/politeiagui/pull/2364) and [end-to-end](https://github.com/decred/politeiagui/pull/2383) tests to catch up with the massive backend changes
+- ~5 other backend and ~11 {2406} UI bug fixes
+- dependency upgrades, code cleanup, API enhancement
+
+Contractor Management System (CMS):
+
+- change invoice peer review [visibility](https://github.com/decred/politeia/pull/1351) from based on author's domain to based on invoice's line items domains. This will allow contractors to review all billed work in their domain even if it is coming from contractors in other domains. The current domains are: Development, Research, Design and Marketing.
+- added more email [notifications](https://github.com/decred/politeia/pull/1353): "Timely submission of invoices will be much more important once the payout from the treasury is fully automated, so further nagging is due."
+- docs update and code cleanup
+
+Politeia v1.0.1 has been [released](https://github.com/decred/politeia/releases/tag/v1.0.1) including all the above fixes and improvements.
+
+Progress towards v1.1.0 can now be tracked on the [Milestones](https://github.com/decred/politeia/milestones) page.
+
+{ stopped at 2406 }
 
 <a id="vspd" />
 
