--- a/journal/202105.md
+++ b/journal/202105.md
@@ -157,7 +157,9 @@ Progress towards v1.1.0 can now be tracked on the [Milestones](https://github.co
 
 **[dcrpool](https://github.com/decred/dcrpool)**
 
-- {}
+- do not try to run with database version [newer](https://github.com/decred/dcrpool/pull/326) than expected
+- handle `SIGTERM` and `SIGHUP` shutdown [signals](https://github.com/decred/dcrpool/pull/327)
+- fixed chain notifications getting [blocked](https://github.com/decred/dcrpool/pull/324) by payment processing and added a workaround for dcrwallet's [reorg handling](https://github.com/decred/dcrwallet/issues/1740) bug
 
 <a id="dcrlnd" />
 
