--- a/journal/202105.md
+++ b/journal/202105.md
@@ -187,9 +187,20 @@ A lot of exciting work towards the [0.3 milestone](https://github.com/decred/dcr
 
 **[dcrandroid](https://github.com/planetdecred/dcrandroid)**
 
-- {}
+- disallow sending from [unmixed](https://github.com/planetdecred/dcrandroid/pull/541) accounts
+- added password input [delays](https://github.com/planetdecred/dcrandroid/pull/542) to counter brute force attacks
+- show [staking](https://github.com/planetdecred/dcrandroid/pull/543)-related transactions on the Overview page
+- updated [dependencies](https://github.com/planetdecred/dcrandroid/pull/546) and replaced usages of CoinShuffle++ with StakeShuffle
+- keep the [display on](https://github.com/planetdecred/dcrandroid/pull/553) until the mixing is completed or canceled
+- show rich text [formatting](https://github.com/planetdecred/dcrandroid/pull/557) for Politeia proposals (without using WebView)
+- updated Chinese and French translations
+- fixed [watch-only](https://github.com/planetdecred/dcrandroid/pull/560) wallet being allowed as a source when sending funds
 
-{ also check the base library https://github.com/planetdecred/dcrlibwallet }
+Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) shared library:
+
+- added code for fetching proposal [description](https://github.com/planetdecred/dcrlibwallet/pull/192) and switch from saving proposal files to loading them on demand
+- integrated a signed TLS [certificate](https://github.com/planetdecred/dcrlibwallet/pull/193) for [cspp.decred.org](https://cspp.decred.org/) which is required when using mainnet
+- fixed bugs with balane and Politeia integration
 
 <a id="dcrios" />
 
@@ -251,7 +262,7 @@ A lot of exciting work towards the [0.3 milestone](https://github.com/decred/dcr
 
 Other:
 
-- { dcraddrscanner prop update }
+- anyone interested in keeping the translations up-to-date is welcome in the [#translations]() chat room
 
 ## People
 
