--- a/journal/202105.md
+++ b/journal/202105.md
@@ -220,7 +220,17 @@ Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) shared li
 
 **[godcr](https://github.com/planetdecred/godcr)**
 
-- {}
+- implemented pages: [Tickets](https://github.com/planetdecred/godcr/pull/395) overview, [Tickets list](https://github.com/planetdecred/godcr/pull/406), and [Restore wallet](https://github.com/planetdecred/godcr/pull/386)
+- implemented the [Max](https://github.com/planetdecred/godcr/pull/396) button for setting the maximum DCR amount that can be sent
+- added the submission of input fields when [Enter](https://github.com/planetdecred/godcr/pull/414) is pressed
+- added [loading](https://github.com/planetdecred/godcr/pull/400) animations to certain modals
+- initial [dark mode](https://github.com/planetdecred/godcr/pull/401) suppot
+- added string translation infrastructure
+- ~9 bug fixes
+
+Elias Naur (creator of the Gio library that powers GoDCR) has kindly reviewed the UI code in GoDCR and shared his [recommendations](https://paste.sr.ht/~eliasnaur/cea1d29d6a5f96668b5e166c2f39ef596974574f), many of which have already been implemented. { can we link this publicly? }
+
+{ what is the "product name" for use in texts, "godcr" or "GoDCR"? }
 
 { maybe GoDCR shot, 768px wide if possible }
 
