--- a/journal/202105.md
+++ b/journal/202105.md
@@ -238,7 +238,10 @@ Elias Naur (creator of the Gio library that powers GoDCR) has kindly reviewed th
 
 **[dcrdata](https://github.com/decred/dcrdata)**
 
-- treasury updates https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$4zk8xKghg5t3tbrDQx6sAuF3Gq-hpaLAvni0RoxImjI
+- [initial version](https://github.com/decred/dcrdata/pull/1824) of the new [`/treasury`](https://dcrdata.decred.org/treasury) page
+- [show](https://github.com/decred/dcrdata/pull/1827) treasury spend transactions on the [mempool](https://dcrdata.decred.org/mempool) page, tspend Yes/No votes on the ticket vote transaction page, and vote tally on tspend's own transaction page
+- added a simpler API endpoint for [exchange rates](https://github.com/decred/dcrdata/pull/1826)
+- added the share of [mixed](https://github.com/decred/dcrdata/pull/1825) coins to the [homepage])(https://explorer.dcrdata.org/)
 
 <a id="tinydecred" />
 
@@ -316,6 +319,8 @@ Community stats as of {date}:
 In May the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received {n} DCR and spent {n} DCR. Using May's average of ${n.nn}, this is ${n} received and ${n} spent. At April's average rate of $198.60, the USD billed for past work is ${n}. As of {date}, Treasury balance is {n} DCR ({n} million USD at ${n.nn}).
 
 { high level recap of decision-making activity and most important events }
+
+{ cover how first tspend was voted on }
 
 - {}
 
