Dev tweaks, add merged recently

--- a/journal/202105.md
+++ b/journal/202105.md
@@ -32,6 +32,8 @@ Contents: { sync }
 
 https://github.com/decred/decred-binaries/releases/tag/v1.6.3
 
+{ see if any interesting changes were not mentioned in 1.6.3 rel notes }
+
 { verify bins }
 
 ## New Treasury Activated
@@ -46,10 +48,6 @@ https://github.com/decred/decred-binaries/releases/tag/v1.6.3
 
 The work reported below has the "merged to master" status unless noted otherwise. It means that the work is completed, reviewed, and integrated into the source code that advanced users can [build and run](https://medium.com/@artikozel/the-decred-node-back-to-the-source-part-one-27d4576e7e1c), but is not yet available in release binaries for regular users.
 
-{ hint: below add an overview of activity for each project. add any other project that warrants a paragraph. drop projects without notable updates. for each project the order of reporting is: changes released > merged to master > started work > discussions and future plans }
-
-{ check if any changes were added between May-28 and May-31 }
-
 <a id="dcrd" />
 
 **[dcrd](https://github.com/decred/dcrd)**
@@ -60,7 +58,7 @@ The work reported below has the "merged to master" status unless noted otherwise
 - perform a graceful shutdown when the [SIGHUP](https://github.com/decred/dcrd/pull/2645) signal is received
 - added script [version](https://github.com/decred/dcrd/pull/2650) to the result of the `gettxout` RPC. The script version is going to become more important in the future when a new version is introduced.
 - [flush](https://github.com/decred/dcrd/pull/2649) block database to disk before UTXO database to ensure the latter can be recovered after an unclean shutdown
-- reworked [UTXO](https://github.com/decred/dcrd/pull/2652) related logic for better separation of concerns. This makes the flow easier to follow and paves the way for optimizing the UTXO database
+- reworked [UTXO](https://github.com/decred/dcrd/pull/2652) related logic for better separation of concerns. This makes the flow easier to follow and paves the way for optimizing the UTXO database.
 
 <a id="dcrwallet" />
 
@@ -68,13 +66,13 @@ The work reported below has the "merged to master" status unless noted otherwise
 
 Merged in master and v1.6.3 release:
 
-- improved heuristic for creating [split transactions](https://github.com/decred/dcrwallet/pull/2034) to address more insufficient balance errors when buying tickets
-- fixed [input selection](https://github.com/decred/dcrwallet/pull/2035) when paying VSP fees, resolving two bugs: one where the intended inputs were not being used and could remaining locked, and another where VSP fee could be paid out of the wrong account, possibly degrading privacy of mixing wallets
+- improved heuristic for creating additional [split transactions](https://github.com/decred/dcrwallet/pull/2034) to fix more insufficient balance errors when buying tickets
+- fixed [input selection](https://github.com/decred/dcrwallet/pull/2035) when paying VSP fees, resolving two bugs: one where the intended inputs were not being used and could remain locked, and another where VSP fee could be paid out of the wrong account, possibly degrading privacy of mixing wallets
 - ensure intended wallet [accounts](https://github.com/decred/dcrwallet/pull/2037) are used for paying VSP fee and receiving change when syncing failed VSP tickets { what is a "failed VSP ticket"? }
 - [multiple](https://github.com/decred/dcrwallet/pull/2045) [fixes](https://github.com/decred/dcrwallet/pull/2046) for [tracking](https://github.com/decred/dcrwallet/pull/2048) VSP-managed tickets regarding fee payment scheduling, error handling, revocations, and expired fee transactions
 - ensure there are [no duplicate](https://github.com/decred/dcrwallet/pull/2042) fee payments and that all are tracked by the VSP client
 - perform a graceful shutdown when the [SIGHUP](https://github.com/decred/dcrwallet/pull/2039) signal is received
-- a new gRPC endpoint that exposes tickets and fees [tracked](https://github.com/decred/dcrwallet/pull/2040) by the VSP client (needed by Decrediton)
+- added a new gRPC endpoint that exposes tickets and fees [tracked](https://github.com/decred/dcrwallet/pull/2040) by the VSP client (used by Decrediton)
 
 Merged in master:
 
@@ -95,18 +93,14 @@ Merged in master and v1.6.3 release:
 - consistently use Lodash for [type checking](https://github.com/decred/decrediton/pull/3135)
 - { were 3476 and 3469 added to 1.6.3 later? }
 
-{ add release build info here or in v1.6.3 section }
-
-{ see if any interesting changes were not mentioned in 1.6.3 rel notes }
-
 Merged in master:
 
 - fixed unmixed and change accounts not being [unlocked](https://github.com/decred/decrediton/pull/3476) when the ticket autobuyer is in privacy mode
 - fixed default Bitcoin [directory](https://github.com/decred/decrediton/pull/3469) on Windows
-- fixed handling of empty value for [balance](https://github.com/decred/decrediton/pull/3468) to maintain
+- fixed handling of [zero](https://github.com/decred/decrediton/pull/3468) "Balance to Maintain" value
 - introduced [preload script](https://github.com/decred/decrediton/pull/3397) and converted some comms between the main and renderer processes to a more robust approach using `invoke/handle`. This is a first step towards isolating all Node-related calls, so that Node integration can be turned off for the main UI code. 
 
-{ pretty DEX integration UI shot, 768px wide if possible }
+{ add a pretty DEX integration UI shot, 768px wide if possible }
 
 <a id="politeia" />
 
@@ -115,17 +109,17 @@ Merged in master:
 Most of the work has been dedicated to updating UI code, testing and fixing bugs after the massive upgrade to the new storage backend and the new API.
 
 - updated [About Politeia](https://github.com/decred/politeiagui/pull/2378) copy
-- added proposal's token to email notification [subject](https://github.com/decred/politeia/pull/1417)
+- put proposal token into email notification [subject](https://github.com/decred/politeia/pull/1417)
 - consistently handle [short](https://github.com/decred/politeiagui/pull/2365) proposal tokens across the UI codebase
 - fixed multiple [comment](https://github.com/decred/politeiagui/pull/2384)-related UI bugs
 - fixed [flickering](https://github.com/decred/politeiagui/pull/2395) during initial UI loading
 - ~2 other backend and ~14 UI bug fixes
-- fixed [unit](https://github.com/decred/politeiagui/pull/2364) and [end-to-end](https://github.com/decred/politeiagui/pull/2383) tests to sync with the new API
+- fixed [unit](https://github.com/decred/politeiagui/pull/2364) and [end-to-end](https://github.com/decred/politeiagui/pull/2383) tests to work with the new backend API
 - dependency upgrades, code cleanup, API enhancement
 
 Contractor Management System (CMS):
 
-- change invoice peer review [visibility](https://github.com/decred/politeia/pull/1351) from based on author's domain to based on invoice's line items domains. This will allow contractors to review all billed work in their domain even if it is coming from contractors in other domains. The current domains are: Development, Research, Design and Marketing.
+- changed invoice peer review [visibility](https://github.com/decred/politeia/pull/1351) from based on author's domain to based on invoice's line item domain. This will allow contractors to review all billed work in their domain even if it is coming from contractors in other domains. The current domains are: Development, Research, Design and Marketing.
 - added more email [notifications](https://github.com/decred/politeia/pull/1353): "Timely submission of invoices will be much more important once the payout from the treasury is fully automated, so further nagging is due."
 - docs update and code cleanup
 - ~4 backend and ~1 UI bug fixes
@@ -141,11 +135,12 @@ Progress towards v1.1.0 can now be tracked on the [Milestones](https://github.co
 - added block explorer [links](https://github.com/decred/vspd/pull/247) for ticket and fee transactions to the UI
 - added best block [height](https://github.com/decred/vspd/pull/254) to status response (useful for detecting stalled VSPs)
 - populate ticket [purchase height](https://github.com/decred/vspd/pull/250) for all confirmed tickets and show it on the admin page
+- improved admin page [aesthetics](https://github.com/decred/vspd/pull/263)
 - added a framework for database [upgrades](https://github.com/decred/vspd/pull/242)
 - improved logging when [recovering](https://github.com/decred/vspd/pull/255) from request handling failures
 - added [config](https://github.com/decred/vspd/pull/249) params for max log size and max log files to keep
 - [remove](https://github.com/decred/vspd/pull/260) confirmed fee transactions from the database, cutting disk usage [by ~2x](https://github.com/decred/vspd/pull/243#issuecomment-844945549)
-- store each ticket in its own [DB bucket](https://github.com/decred/vspd/pull/243). Combined with the previous optimization, it allows to trade ~40% more disk usage for ~50% faster insertion and ~85% faster counting of tickets.
+- store each ticket in its own [DB bucket](https://github.com/decred/vspd/pull/243). Combined with the previous optimization, it allows to trade ~40% higer disk usage for ~50% faster insertion and ~85% faster counting of tickets.
 
 <a id="dcrstakepool" />
 
@@ -165,14 +160,14 @@ Progress towards v1.1.0 can now be tracked on the [Milestones](https://github.co
 
 **[DCRDEX](https://github.com/decred/dcrdex)**
 
-DCRDEX v0.2.0 has been released! It incorporates more than 3 months of work since the v0.1.5 release. Most notable changes:
+DCRDEX v0.2.0 has been released! It incorporates more than 3 months of work since the v0.1.5 release. Most notable changes are:
 
 - UI and usability enhancements including responsive design and interactive depth chart
 - support for client control by Decrediton and use of its accounts
 - account import/export
 - experimental Bitcoin Cash (BCH) support
 
-Check Important Notices and the full list of changes in the [release notes](https://github.com/decred/decred-binaries/releases/tag/v1.6.3#dcrdex-v020). The [DEX page](https://dex.decred.org/) guides through installation steps. (More) advanced users can grab the binaries [here](https://github.com/decred/decred-binaries/releases/tag/v1.6.3#downloads-v163). Don't forget to [verify](https://docs.decred.org/advanced/verifying-binaries/) downloaded files to ensure they came unmodified.
+Check Important Notices and the full list of changes in the [release notes](https://github.com/decred/decred-binaries/releases/tag/v1.6.3#dcrdex-v020). The [DEX page](https://dex.decred.org/) guides through simplified installation steps. More advanced users can get the binaries [here](https://github.com/decred/decred-binaries/releases/tag/v1.6.3#downloads-v163) and install them manually. Don't forget to [verify](https://docs.decred.org/advanced/verifying-binaries/) the downloads to ensure they came unmodified.
 
 Merged in master:
 
@@ -194,11 +189,11 @@ A lot of exciting work towards the [0.3 milestone](https://github.com/decred/dcr
 - keep the [display on](https://github.com/planetdecred/dcrandroid/pull/553) until the mixing is completed or canceled
 - show rich text [formatting](https://github.com/planetdecred/dcrandroid/pull/557) for Politeia proposals (without using WebView)
 - updated Chinese and French translations
-- fixed [watch-only](https://github.com/planetdecred/dcrandroid/pull/560) wallet being allowed as a source when sending funds
+- fixed [watch-only](https://github.com/planetdecred/dcrandroid/pull/560) wallet being listed as a source when sending funds
 
 Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) shared library:
 
-- added code for fetching proposal [description](https://github.com/planetdecred/dcrlibwallet/pull/192) and switch from saving proposal files to loading them on demand
+- added code for fetching proposal [description](https://github.com/planetdecred/dcrlibwallet/pull/192) and switched from saving proposal files to loading them on demand
 - integrated a signed TLS [certificate](https://github.com/planetdecred/dcrlibwallet/pull/193) for [cspp.decred.org](https://cspp.decred.org/) which is required when using mainnet
 - fixed bugs with balance and Politeia integration
 
@@ -207,9 +202,9 @@ Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) shared li
 **[dcrios](https://github.com/planetdecred/dcrios)**
 
 - implemented [Privacy mode](https://github.com/planetdecred/dcrios/pull/727) with guided setup of the mixer
-- show [USD equivalent](https://github.com/planetdecred/dcrios/pull/746) of a user's DCR balance on the Overview page
+- show [USD equivalent](https://github.com/planetdecred/dcrios/pull/746) of wallet's DCR balance on the Overview page
 - added password input [delays](https://github.com/planetdecred/dcrios/pull/749) to resist brute force attacks
-- show wallet [names](https://github.com/planetdecred/dcrios/pull/776) on the Overview page when there is more than one wallet
+- on the Overview page, show [which wallet](https://github.com/planetdecred/dcrios/pull/776) transactions belong to when there is more than one wallet
 - show more specific [notifications](https://github.com/planetdecred/dcrios/pull/766) for staking transactions (ticket voted or revoked)
 - show rich text [formatting](https://github.com/planetdecred/dcrios/pull/773) for Politeia proposals (without using UIWebView)
 - fixed incorrect list of [accounts](https://github.com/planetdecred/dcrios/pull/765) to send from
@@ -222,13 +217,13 @@ Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) shared li
 
 - implemented pages: [Tickets](https://github.com/planetdecred/godcr/pull/395) overview, [Tickets list](https://github.com/planetdecred/godcr/pull/406), and [Restore wallet](https://github.com/planetdecred/godcr/pull/386)
 - implemented the [Max](https://github.com/planetdecred/godcr/pull/396) button for setting the maximum DCR amount that can be sent
-- added the submission of input fields when [Enter](https://github.com/planetdecred/godcr/pull/414) is pressed
+- added the submission of input fields with pressing [Enter](https://github.com/planetdecred/godcr/pull/414)
 - added [loading](https://github.com/planetdecred/godcr/pull/400) animations to certain modals
 - initial [dark mode](https://github.com/planetdecred/godcr/pull/401) suppot
-- added string translation infrastructure
+- added language translation infrastructure
 - ~9 bug fixes
 
-Elias Naur (creator of the Gio library that powers GoDCR) has kindly reviewed the UI code in GoDCR and shared his [recommendations](https://paste.sr.ht/~eliasnaur/cea1d29d6a5f96668b5e166c2f39ef596974574f), many of which have already been implemented. { can we link this publicly? }
+Elias Naur (creator of the Gio library that powers GoDCR) has kindly reviewed the UI code and shared his [recommendations](https://paste.sr.ht/~eliasnaur/cea1d29d6a5f96668b5e166c2f39ef596974574f), many of which have already been implemented. { can we link this publicly? }
 
 { what is the "product name" for use in texts, "godcr" or "GoDCR"? }
 
@@ -240,8 +235,8 @@ Elias Naur (creator of the Gio library that powers GoDCR) has kindly reviewed th
 
 - [initial version](https://github.com/decred/dcrdata/pull/1824) of the new [`/treasury`](https://dcrdata.decred.org/treasury) page
 - [show](https://github.com/decred/dcrdata/pull/1827) treasury spend transactions on the [mempool](https://dcrdata.decred.org/mempool) page, tspend Yes/No votes on the ticket vote transaction page, and vote tally on tspend's own transaction page
-- added a simpler API endpoint for [exchange rates](https://github.com/decred/dcrdata/pull/1826)
-- added the share of [mixed](https://github.com/decred/dcrdata/pull/1825) coins to the [homepage])(https://explorer.dcrdata.org/)
+- added a simpler endpoint to query [exchange rates](https://github.com/decred/dcrdata/pull/1826)
+- added the share of [mixed](https://github.com/decred/dcrdata/pull/1825) coins to the [homepage](https://dcrdata.decred.org/) (under Distribution)
 
 <a id="dcrdocs" />
 
@@ -260,17 +255,9 @@ Elias Naur (creator of the Gio library that powers GoDCR) has kindly reviewed th
 - [updated](https://github.com/decred/dcrweb/pull/957) [`/exchanges`](https://decred.org/exchanges/) page
 - added [hardware wallets](https://github.com/decred/dcrweb/pull/989) section on the [`/wallets`](https://decred.org/wallets/) page
 
-{ check other repos in:
-
-- https://github.com/decred
-- https://github.com/planetdecred
-- https://github.com/raedahgroup
-
-}
-
 Other:
 
-- anyone interested in keeping the translations up-to-date is welcome in the [#translations]() chat room
+- translations require continuous maintenance. Join the [#translations](https://chat.decred.org/#/room/#translations:decred.org) chat room to coordinate with the other translators and developers.
 
 ## People
 
