--- a/journal/202105.md
+++ b/journal/202105.md
@@ -263,7 +263,7 @@ Other:
 
 { hint: list people who made their first non-trivial commits merged in master branches, in alphabetical order }
 
-Welcome to new first time contributors with code merged to master: {@handle} ([{repo}]({link to user's commits})), ...
+Welcome to new first time contributors with code merged to master: @LasTshaMAN ([politeia](https://github.com/decred/politeia/commits?author=LasTshaMAN))
 
 Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [{@handle}]({link to most relevant account}). { hint: check the CMS }
 
